# riscv-toy-os

./: meson.build  riscv.cross
kernel/: boot.S  kernel.c
